--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
                                         соответствующие кнопки. Для редактирования и удаления
                                         события, так же необходимо нажать на соответствующие кнопки. </string>
     <string name="defaultDateTime">20.20.2020 02:02</string>
+    <string name="errorNumbScale">Введите: 1–1000</string>
+    <string name="errorNumbNull">Введите значение</string>
+    <string name="errorDescriptionNull">Введите описание</string>
+
 </resources>
